<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundMode="outline"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxCornerRadiusTopEnd="@dimen/_16dp"
        app:boxCornerRadiusTopStart="@dimen/_16dp"
        app:boxCornerRadiusBottomStart="@dimen/_16dp"
        app:boxCornerRadiusBottomEnd="@dimen/_16dp"
        app:counterEnabled="true"
        app:counterMaxLength="50"
         android:layout_gravity="center_vertical">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_margin="@dimen/_5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundMode="outline"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxCornerRadiusTopEnd="@dimen/_16dp"
        app:boxCornerRadiusTopStart="@dimen/_16dp"
        app:boxCornerRadiusBottomStart="@dimen/_16dp"
        app:boxCornerRadiusBottomEnd="@dimen/_16dp"
        app:counterEnabled="true"
        app:counterMaxLength="30">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pass_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_margin="5dp"
            android:layout_marginTop="20dp" />


    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/login_tv"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/login"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/btn_add"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/signup_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_a_member_sign_up_here"
        android:textSize="@dimen/_18sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_20dp"/>

</LinearLayout>